fix su.phtml to take "page" value comment stylesheet better move postform inline colors into css make showmessage postform look like showforum postform cleanup links ... convert from "[ foo ] [ bar ]" to "foo | bar" to make it less cluttered the "message" tools can't be done that way because we dont know where to put the |'s yet change a few href &'s into &amp;'s comment out broken browser detection code: it doesn't do anything anyway (yet) refactor message.inc "tool" link calculation into something marginally more readable.

--- a/config/css/main.css
+++ b/config/css/main.css
@@ -52,6 +52,17 @@ ul.showthread tr.messagesubjectrow td {
     background: #eeeeee;
 }
 
+/* signature in showthread */
+ul.showthread .signature {
+    /* visibility: hidden; */
+    /*
+    overflow: hidden;
+    max-height: 120px;
+    max-width: 800px;
+    */
+}
+
+/* message area styles */
 div.messageblock {
     padding-top: 0.5em;
     padding-bottom: 0.5em;
@@ -98,4 +109,8 @@ ul.showthread td, ul.showthread div.messageblock {
     background: #ffeeee;
     font-family: monospace;
     padding: 5px;
+}
+
+table.postform tr td {
+    background: #dfdfdf;
 }
